ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Ava to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
