ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_completion_timestamps(& (combined))
---
• Waited for background terminal · cargo test -p ava-core

• Streaming response.

  [completion time]
